Fixed a bug with too big h1 on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -33,4 +33,7 @@ h2 {
 		margin-left: auto;
 		margin-right: auto;
 	}
+    
+    h1 {
+    font-size: 500%;
 }
